Se modificaron algunas relaciones pendientes